--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -80,6 +80,8 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
+        "import geonamescache\n",
+        "from geonamescache.mappers import country\n",
         "\n",
         "# SK-learn libraries for learning.\n",
         "from sklearn.pipeline import Pipeline\n",
@@ -90,7 +92,11 @@
         "from sklearn.cluster import *\n",
         "from sklearn.model_selection import KFold\n",
         "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.decomposition import TruncatedSVD\n",
+        "from sklearn.mixture import GaussianMixture\n",
         "from sklearn import metrics\n",
+        "from sklearn import svm, preprocessing\n",
         "\n",
         "# SK-learn decomp\n",
         "from sklearn.decomposition import TruncatedSVD\n",
@@ -571,11 +577,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "zi3gezXbZjKd",
-        "outputId": "b5d94a1b-581a-4de8-a1ec-d9a026e4052e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
-        }
+        },
+        "outputId": "b5d94a1b-581a-4de8-a1ec-d9a026e4052e"
       },
       "source": [
         "#CREDIT TO SOURCES\n",
@@ -583,10 +589,6 @@
         "#https://colab.research.google.com/notebooks/snippets/importing_libraries.ipynb\n",
         "#https://stackoverflow.com/questions/33098040/how-to-use-word-tokenize-in-data-frame\n",
         "#https://stackoverflow.com/questions/34962104/how-can-i-use-the-apply-function-for-a-single-column\n",
-        "\n",
-        "#import libraries \n",
-        "import geonamescache\n",
-        "from geonamescache.mappers import country\n",
         "\n",
         "def text_clean(text):\n",
         "  #remove line breaks\n",
@@ -751,11 +753,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "MsiGqXSIa2Tl",
-        "outputId": "52ac9938-1c8f-4b3e-c3f2-6f18c89d07ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 382
-        }
+        },
+        "outputId": "52ac9938-1c8f-4b3e-c3f2-6f18c89d07ac"
       },
       "source": [
         "# Code inspired by https://towardsdatascience.com/basic-tweet-preprocessing-in-python-efd8360d529e\n",
@@ -972,11 +974,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "iEvqrXNya2Tm",
-        "outputId": "6d07d44b-7057-4946-9d65-144f2322699d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "6d07d44b-7057-4946-9d65-144f2322699d"
       },
       "source": [
         "### First, let's create all of the regexes that we will need\n",
@@ -1289,10 +1291,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "f_SuXicta2Tn",
-        "outputId": "2360f409-e809-4d2d-9415-c44e97ebf699",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2360f409-e809-4d2d-9415-c44e97ebf699"
       },
       "source": [
         "# First, let's define all the functions we will need for our calculations\n",
@@ -1384,11 +1386,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ldzRDx8Ra2Tn",
-        "outputId": "3e970e7c-d3f3-482d-e11d-e3cb20f9b0e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 513
-        }
+        },
+        "outputId": "3e970e7c-d3f3-482d-e11d-e3cb20f9b0e3"
       },
       "source": [
         "def create_bar_plot(column, title):\n",
@@ -1419,11 +1421,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "wPa6Amfpa2To",
-        "outputId": "ab2997a3-bdd9-4756-aa9b-1a63b43f786e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 513
-        }
+        },
+        "outputId": "ab2997a3-bdd9-4756-aa9b-1a63b43f786e"
       },
       "source": [
         "create_bar_plot('mention_count', 'Mention Count Distribution for Training Data')"
@@ -1448,11 +1450,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ggEt2p3Ta2To",
-        "outputId": "979807be-7abd-4bce-cad7-d140ed22005e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 513
-        }
+        },
+        "outputId": "979807be-7abd-4bce-cad7-d140ed22005e"
       },
       "source": [
         "create_bar_plot('hashtag_count', 'Hashtag Count Distribution for Training Data')"
@@ -1625,10 +1627,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3JyS8JU-a2Tp",
-        "outputId": "250f7625-c1e3-43a9-fbb7-3a46964e437b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "250f7625-c1e3-43a9-fbb7-3a46964e437b"
       },
       "source": [
         "def run_model_on_preprocessed_text(preprocessed_text):\n",
@@ -1691,8 +1693,6 @@
         "id": "9LKc-fXt4oeO"
       },
       "source": [
-        "from sklearn.model_selection import GridSearchCV\n",
-        "\n",
         "def run_model_on_transformed_data(model, transformed_data, params):\n",
         "    print(\"Fitting GridSearch to optimize accuracy (this takes a while)...\")\n",
         "    accuracy_gridsearch_model = fit_gridsearch_model(model, transformed_data, params, 'accuracy')\n",
@@ -1855,9 +1855,6 @@
         "#https://www.ritchieng.com/machine-learning-multinomial-naive-bayes-vectorization/\n",
         "#https://towardsdatascience.com/natural-language-processing-on-multiple-columns-in-python-554043e05308\n",
         "\n",
-        "from sklearn.model_selection import cross_val_score\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "\n",
         "#vectorize data with no stop word removal and no suffix striping\n",
         "vectorizer = CountVectorizer()\n",
         "vtrain = vectorizer.fit_transform(preprocessed_text)\n",
@@ -1962,8 +1959,6 @@
         "id": "f3yITt0c4oeP"
       },
       "source": [
-        "from sklearn import svm, preprocessing\n",
-        "\n",
         "# Function to scale data to speed up SVM fitting\n",
         "def scale_data(vectorized_text):\n",
         "    return preprocessing.MaxAbsScaler().fit_transform(vectorized_text)\n",
@@ -2009,11 +2004,6 @@
         "id": "PBji2t9W9eR8"
       },
       "source": [
-        "from sklearn.model_selection import GridSearchCV\n",
-        "from sklearn.decomposition import TruncatedSVD\n",
-        "from sklearn.mixture import GaussianMixture\n",
-        "\n",
-        "\n",
         "preprocessed_text = preprocess_text()\n",
         "preprocessed_text_with_additional_cleaning = preprocess_text_with_additional_cleaning(word_tokenize)\n",
         "\n",
@@ -2051,7 +2041,7 @@
         "id": "xy4JGyBc4oeP"
       },
       "source": [
-        "# Extras"
+        "## Conclusion"
       ]
     }
   ]
