--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -259,7 +259,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 290
+          "height": 272
         },
         "id": "PbuWUL9iTPG6",
         "outputId": "3c033f69-dc26-44af-9de4-da4d63245d47"
@@ -591,32 +591,16 @@
         "#https://stackoverflow.com/questions/34962104/how-can-i-use-the-apply-function-for-a-single-column\n",
         "\n",
         "def text_clean(text):\n",
-        "  #remove line breaks\n",
-        "  text = re.sub(r\"\\n\",\"\",text)\n",
-        "\n",
-        "  #convert to lowercase \n",
-        "  text = text.lower()\n",
-        "\n",
-        "  #remove digits and currencies \n",
-        "  text = re.sub(r\"\\d+\",\"\",text) \n",
+        "  text = re.sub(r\"\\n\",\"\",text)   #remove line breaks\n",
+        "  text = text.lower() #convert to lowercase \n",
+        "  text = re.sub(r\"\\d+\",\"\",text)   #remove digits and currencies \n",
         "  text = re.sub(r'[\\$\\d+\\d+\\$]', \"\", text)      \n",
-        "\n",
-        "  #remove dates \n",
+        "  text = re.sub(r'\\d+[\\.\\/-]\\d+[\\.\\/-]\\d+', '', text)   #remove dates \n",
         "  text = re.sub(r'\\d+[\\.\\/-]\\d+[\\.\\/-]\\d+', '', text)\n",
         "  text = re.sub(r'\\d+[\\.\\/-]\\d+[\\.\\/-]\\d+', '', text)\n",
-        "  text = re.sub(r'\\d+[\\.\\/-]\\d+[\\.\\/-]\\d+', '', text)\n",
-        "\n",
-        "  #remove non-ascii\n",
-        "  text = re.sub(r'[^\\x00-\\x7f]',r' ',text) \n",
-        "\n",
-        "  #remove punctuation\n",
-        "  text = re.sub(r'[^\\w\\s]','',text) \n",
-        "\n",
-        "  #remove hyperlinks\n",
-        "  text = re.sub(r'https?:\\/\\/.*[\\r\\n]*', '', text)\n",
-        "\n",
-        "  #replace extra whitespaces with a single one \n",
-        "  #text = re.sub(re.sub(' +', ' ', text)\n",
+        "  text = re.sub(r'[^\\x00-\\x7f]',r' ',text)   #remove non-ascii\n",
+        "  text = re.sub(r'[^\\w\\s]','',text)   #remove punctuation\n",
+        "  text = re.sub(r'https?:\\/\\/.*[\\r\\n]*', '', text)   #remove hyperlinks\n",
         "  return text\n",
         "\n",
         "#break out location identifiers into separate lists\n",
@@ -636,7 +620,6 @@
         "countries = list(country_names.keys())\n",
         "countries = [c.lower() for c in countries]\n",
         "iso3 = [val[\"iso3\"].lower() for key, val in country_names.items() if \"iso3\" in val]\n",
-        "#iso = [val[\"iso\"].lower() for key, val in country_names.items() if \"iso\" in val] risks too many incorrect categorizations\n",
         "\n",
         "#define dataframe; drop null values \n",
         "loc_list = train_data[['location', 'target']].dropna(subset=['location'])\n",
@@ -670,12 +653,6 @@
         "    val = mapper(ctry[0].upper())\n",
         "    country.append(val.lower())\n",
         "    continue\n",
-        "\n",
-        "  # if l.intersection(iso):\n",
-        "  #   ctry = list(l.intersection(iso))\n",
-        "  #   val = mapper2(ctry[0].upper())\n",
-        "  #   country.append(val.lower())\n",
-        "  #   continue\n",
         "\n",
         "  else:\n",
         "    country.append('unknown')\n",
@@ -725,7 +702,6 @@
         "\n",
         "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12,4))\n",
         "fig.subplots_adjust(wspace=.5)\n",
-        "#fig.suptitle('Tweets by Country')\n",
         "dt.plot.barh(ax=ax1, color='c', legend=None)\n",
         "ndt.plot.barh(ax=ax2, color='c', legend=None)\n",
         "\n",
